--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"geo.jpg\" width = 60 height=60  align=right hspace=3 vspace=5>\n",
-    "<img src=\"UNAM.png\" width=70 height=70 align=left hspace =3 vspace=5>\n",
-    "<img src=\"uas.png\" width=60 height=60 align=left hspace =3 vspace=10>\n",
+    "<img src=\"geo.jpg/\" width = 60 height=60  align=right hspace=3 vspace=5>\n",
+    "<img src=\"UNAM.png/\" width=70 height=70 align=left hspace =3 vspace=5>\n",
+    "<img src=\"uas.png/\" width=60 height=60 align=left hspace =3 vspace=10>\n",
     "# <CENTER>PROYECTO VERANO\n",
     "#### <center> Guillermo Alberto Sapiéns Peiro |Universidad Autónoma de Sinaloa |galberto.sapiens@gmail.com\n"
    ]
